# derive-from

./: Cargo.toml  README.md
src/: lib.rs
tests/: derive.rs
